Description
Steps to reproduce it:
Try the following sequence in reactos cmd (running under React OS)
1) create a directory
mkdir test
2) create a subdirectory of it and a file inside it
cd test
mkdir subtest
echo "hola"> testfile.txt
3) Now run del /s from c:\
cd c:\
del /s test
As you can see in the screenshot, the file testfile.txt is still there!
According to the documentation in
https://www.microsoft.com/resources/documentation/windows/xp/all/proddocs/en-us/del.mspx?mfr=true
the switch /s "Deletes specified files from the current directory and all subdirectories. Displays the names of the files as they are being deleted. "
[ It seems that the files should be deleted, but not the directories test and subtest]
The file /base/shell/cmd/del.c where the del internal command is implemented says:
"Optimized the recursive deletion in directories." so I guess this should work.
(The symbol DEL_SUBDIR corresponding to the /S flag appears only 3 times in the source)
Attachments
Issue Links
- relates to
-
CORE-8002 METABUG - cmd.exe Command-line interpreter bugs
-
- Open
-